done first post

--- a/Skillwill_LandingPage.html
+++ b/Skillwill_LandingPage.html
@@ -4,10 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>landing page</title>
+    <title>project</title>
+    <link rel="stylesheet" href="./style.css"> <!--connect ccs-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"><!-- this 3 link bellow is adding new font-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+ <header>
+    <nav class="header-bar"><!--   here is navigation logo and buttons   -->
+        <div> <!-- logo nad logo text-->
+            <img src="./sorce/images/logo/nav/underline.svg" alt="iamge">
+            <img src="./sorce/images/logo text/Starter.png" alt="sitename">
+        </div>
+        <div class="buttons"> <!--buttons-->
+            <a href="#">Blog</a>
+            <a href="#">Newsletter</a>
+            <a href="#">Twitter</a>
+        </div>
+    </nav>
+ </header>
+
+ <img src="./sorce/images/logo text/recent Projects.svg" alt="" style="margin: 94px auto 83px 144px;">
+
+ <main>
     
+    <div class="element">
+        <div><!--lightning image -->
+            <img src="./sorce/images/pictures/lightning.svg" alt="lightning">
+        </div>
+        <div class="text"><!--title and text-->
+            <h2>Project1</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse bibendum.</p>
+            <p>Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</p>
+        </div>
+    </div>
+
+
+    
+ </main>
 </body>
 </html>
