allmost done, need some little changes

--- a/Skillwill_LandingPage.html
+++ b/Skillwill_LandingPage.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./style.css"> <!--connect ccs-->
     <link rel="preconnect" href="https://fonts.googleapis.com"><!-- this 3 link bellow is adding new font-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
  <header>
     <nav class="header-bar"><!--   here is navigation logo and buttons   -->
         <div> <!-- logo nad logo text-->
-            <img src="./sorce/images/logo/nav/underline.svg" alt="iamge">
+            <img src="./sorce/images/logo/Frame.svg" alt="iamge">
             <img src="./sorce/images/logo text/Starter.png" alt="sitename">
         </div>
         <div class="buttons"> <!--buttons-->
@@ -70,18 +70,48 @@
     
 <img src="./sorce/images/logo text/latest posts.svg" alt="latest posts" style="margin:94px auto 82px 6px ">
 
-    <nav>
-        <div>
+    <nav class="latest-posts" >
+        <div> <!-- first-->
             <img src="./sorce/images/pictures/laptop.svg" alt="laptop">
-            <p>Lorem ipsum dolor </p>
-            <pre>April 24, 2022 - 5 min read
+            <p class="headline-botoom">Lorem ipsum dolor </p>
+            <div>
+                <p class="timer">April 24, 2022 - 5 min read</p>
+                <p>Nunc non posuere consectetur, justo <br> erat semper enim, non hendrerit dui <br> odio id enim.</p>
+            </div>
 
-                Nunc non posuere consectetur, justo erat semper enim, non hendrerit dui odio id enim.</pre>
-                
         </div>
-        <div></div>
-        <div></div>
+
+        <div>  <!--sacond-->
+            <img src="./sorce/images/pictures/board.svg" alt="board">
+            <h3 class="headline-botoom">Lorem ipsum dolor </h3>
+            <div>
+                <p class="timer">April 24, 2022 - 5 min read</p>
+                <p>Nunc non posuere consectetur, justo <br> erat semper enim, non hendrerit dui <br> odio id enim.</p>
+            </div>
+        </div>
+
+        <div>  <!--htird-->
+            <img src="./sorce/images/pictures/plant.svg" alt="plasnt">
+            <p class="headline-botoom">Lorem ipsum dolor </p>
+            <div>
+                <p class="timer">April 24, 2022 - 5 min read</p>
+                <p>Nunc non posuere consectetur, justo <br> erat semper enim, non hendrerit dui <br> odio id enim.</p>
+            </div>
+        </div>
     </nav>
  </main>
+
+ <footer>
+    <nav>
+        <p>© Copyright 2022  All rights reserved</p>
+
+        <div class="footer-social"><!--social media-->
+            <a href="#"><img src="./sorce/images/social/facebook.svg" alt="facebook"></a>
+            <a href="#"><img src="./sorce/images/social/twitter.svg" alt="twitter"></a>
+            <a href="#"><img src="./sorce/images/social/linked in.svg" alt="linkedin"></a>
+        </div>
+
+    </nav>
+ </footer>
 </body>
 </html>
