--- a/Skillwill_LandingPage.html
+++ b/Skillwill_LandingPage.html
@@ -14,8 +14,10 @@
  <header>
     <nav class="header-bar"><!--   here is navigation logo and buttons   -->
         <div> <!-- logo nad logo text-->
-            <img src="./sorce/images/logo/Frame.svg" alt="iamge">
-            <img src="./sorce/images/logo text/Starter.png" alt="sitename">
+            <a href="#">
+                <img src="./sorce/images/logo/Frame.svg" alt="iamge">
+                <img src="./sorce/images/logo text/Starter.png" alt="sitename">
+            </a>
         </div>
         <div class="buttons"> <!--buttons-->
             <a href="#">Blog</a>
@@ -71,33 +73,33 @@
 <img src="./sorce/images/logo text/latest posts.svg" alt="latest posts" style="margin:94px auto 82px 6px ">
 
     <nav class="latest-posts" >
-        <div> <!-- first-->
+        <a href=""><div> <!-- first-->
             <img src="./sorce/images/pictures/laptop.svg" alt="laptop">
-            <p class="headline-botoom">Lorem ipsum dolor </p>
+            <h3 class="headline-botoom">Lorem ipsum dolor </h3>
             <div>
                 <p class="timer">April 24, 2022 - 5 min read</p>
                 <p>Nunc non posuere consectetur, justo <br> erat semper enim, non hendrerit dui <br> odio id enim.</p>
             </div>
+        </div></a>
 
-        </div>
-
-        <div>  <!--sacond-->
+        <a href="#"><div>  <!--sacond-->
             <img src="./sorce/images/pictures/board.svg" alt="board">
             <h3 class="headline-botoom">Lorem ipsum dolor </h3>
             <div>
                 <p class="timer">April 24, 2022 - 5 min read</p>
                 <p>Nunc non posuere consectetur, justo <br> erat semper enim, non hendrerit dui <br> odio id enim.</p>
             </div>
-        </div>
+        </div></a>
 
-        <div>  <!--htird-->
+
+        <a href="#"><div>  <!--htird-->
             <img src="./sorce/images/pictures/plant.svg" alt="plasnt">
-            <p class="headline-botoom">Lorem ipsum dolor </p>
+            <h3 class="headline-botoom">Lorem ipsum dolor </h3>
             <div>
                 <p class="timer">April 24, 2022 - 5 min read</p>
                 <p>Nunc non posuere consectetur, justo <br> erat semper enim, non hendrerit dui <br> odio id enim.</p>
             </div>
-        </div>
+        </div></a>
     </nav>
  </main>
 
@@ -106,9 +108,9 @@
         <p>© Copyright 2022  All rights reserved</p>
 
         <div class="footer-social"><!--social media-->
-            <a href="#"><img src="./sorce/images/social/facebook.svg" alt="facebook"></a>
-            <a href="#"><img src="./sorce/images/social/twitter.svg" alt="twitter"></a>
-            <a href="#"><img src="./sorce/images/social/linked in.svg" alt="linkedin"></a>
+            <a href="https://www.facebook.com/"><img src="./sorce/images/social/facebook.svg" alt="facebook"></a>
+            <a href="https://twitter.com/"><img src="./sorce/images/social/twitter.svg" alt="twitter"></a>
+            <a href="https://www.linkedin.com/"><img src="./sorce/images/social/linked in.svg" alt="linkedin"></a>
         </div>
 
     </nav>
