--- a/Skillwill_LandingPage.html
+++ b/Skillwill_LandingPage.html
@@ -27,7 +27,7 @@
     </nav>
  </header>
 
- <img src="./sorce/images/logo text/recent Projects.svg" alt=" recent Projects" style="margin: 94px auto 83px 144px;">
+    <img src="./sorce/images/logo text/recent Projects.svg" alt=" recent Projects" style="margin: 94px auto 83px 144px;">
 
  <main>
     
@@ -70,7 +70,7 @@
         </div>
     </div>
     
-<img src="./sorce/images/logo text/latest posts.svg" alt="latest posts" style="margin:94px auto 82px 6px ">
+    <img src="./sorce/images/logo text/latest posts.svg" alt="latest posts" style="margin:94px auto 82px 6px ">
 
     <nav class="latest-posts" >
         <a href=""><div> <!-- first-->
@@ -104,15 +104,15 @@
  </main>
 
  <footer>
-    <nav>
-        <p>© Copyright 2022  All rights reserved</p>
-
-        <div class="footer-social"><!--social media-->
-            <a href="https://www.facebook.com/"><img src="./sorce/images/social/facebook.svg" alt="facebook"></a>
-            <a href="https://twitter.com/"><img src="./sorce/images/social/twitter.svg" alt="twitter"></a>
-            <a href="https://www.linkedin.com/"><img src="./sorce/images/social/linked in.svg" alt="linkedin"></a>
+    <nav class="footer">
+        <div>
+            <p>© Copyright 2022  All rights reserved</p>
         </div>
-
+        <div class="links">
+            <a href="#" style="order: 0;"><img src="./sorce/images/social/facebook.svg" alt="facebook"></a>
+            <a href="#" style="order: 1;"><img src="./sorce/images/social/twitter.svg" alt="twitter"></a>
+            <a href="#" style="order: 2;"><img src="./sorce/images/social/linked in.svg" alt="linkedin"></a>
+        </div>
     </nav>
  </footer>
 </body>
